ch-3/guestbook/block-other-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: prod
  name: block-other-namespace
spec:
  podSelector: {}
  ingress:
    - from:
        - podSelector: {}
